# nix-assistant

./: .gitignore  CREDITS.md  LICENSE  MODEL_CARD.md  NOTICE  README.md  flake.nix  pyproject.toml
assistant/: cli.py  embed.py  lint.py  retrieve.py  review.py  server.py
eval/: metrics.py  patterns.py  plot.py  rescore.py  run.py  schema.py
eval/dataset/: v0_seed.jsonl
eval/results/: v0.1_qwen_1.5b_lora.json  v0_base_qwen_1.5b.json  v0_live.json
eval/runners/: live_xnode.py  local_adapter.py  local_pipeline.py
frontend/: index.html
scrape/: export_hf.py  generate_pairs.py  oracle.py  pyproject.toml  scrape.py  synthesizers.py
scrape/src/: db.py  options.nix  pass_a_enumerate.py  pass_o_options.py
train/: build_frontend.py  finetune.py  merge_lora.py  pull_model.sh  ship_v0.1.sh
